language/tools/move-unit-test/tests/test_sources/native_signer_creation.exp
Running Move unit tests
[ PASS    ] 0x1::M::test_determinisim
[ FAIL    ] 0x1::M::test_doesnt_exist
[ PASS    ] 0x1::M::test_exists

Test failures:

Failures in 0x1::M:

┌── test_doesnt_exist ──────
│ error: 
│ 
│     ┌── tests/test_sources/native_signer_creation.move:47:9 ───
│     │
│  47 │         abort 0
│     │         ^^^^^^^ Test was not expected to abort but it aborted with 0 here
│     ·
│  36 │     fun test_doesnt_exist() {
│     │         ----------------- In this function in 0x1::M
│     │
│ 
│ 
└──────────────────

Test result: FAILED. Total tests: 3; passed: 2; failed: 1
